--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,20 @@
 			<artifactId>java-client</artifactId>
 			<version>9.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.yev/screenshot -->
+
+<dependency>
+    <groupId>com.github.yev</groupId>
+    <artifactId>screenshot</artifactId>
+    <version>0.2</version>
+</dependency>
 
 
+			<dependency>
+			<groupId>pom</groupId>
+			<artifactId>pomframework</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<!--<build>
