--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	
-	
+
+
 	<dependencies>
 		<!--
 		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -49,6 +49,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-testng</artifactId>
+			<version>2.20.1</version> <!-- or the latest version -->
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
@@ -64,18 +70,35 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.github.yev/screenshot -->
 
-<dependency>
-    <groupId>com.github.yev</groupId>
-    <artifactId>screenshot</artifactId>
-    <version>0.2</version>
-</dependency>
+		<dependency>
+			<groupId>com.github.yev</groupId>
+			<artifactId>screenshot</artifactId>
+			<version>0.2</version>
+		</dependency>
 
 
-			<dependency>
+		<dependency>
 			<groupId>pom</groupId>
 			<artifactId>pomframework</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>5.5.0</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
+<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest</artifactId>
+    <version>3.0</version>
+    <scope>test</scope>
+</dependency>
+
 	</dependencies>
 
 	<!--<build>
