--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,7 @@
 			<version>0.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>pom</groupId>
-			<artifactId>pomframework</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+		
 
 
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
@@ -99,6 +95,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>hybridframework</groupId>
+			<artifactId>hybridframework</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
